--- a/.pylintrc
+++ b/.pylintrc
@@ -3,6 +3,7 @@ init-hook='import sys; sys.path.append("src")'
 
 [MESSAGES CONTROL]
 disable=
+	broad-except,
 	missing-class-docstring,
 	missing-function-docstring,
 	missing-module-docstring,
@@ -11,6 +12,9 @@ disable=
 	too-few-public-methods,
 	too-many-arguments,
 	unspecified-encoding,
+
+[FORMAT]
+good-names=e
 
 [IMPORTS]
 known-third-party=
