--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-mlflow
-paho-mqtt
-pyyaml
-rdflib
-requests
+mlflow~=1.29.0
+paho-mqtt~=1.6.1
+pyyaml~=5.3.1
+rdflib~=6.2.0
+requests~=2.28.1
+
+service~=0.6.0
+numpy~=1.23.3
+tensorflow~=2.10.0
